@@ -7,6 +7,8 @@ import static org.junit.Assert.assertThat;
 
 import java.net.URL;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 
@@ -27,11 +29,11 @@ public class TestResultsTest {
 	final static FullyQualifiedName test04 = new TestFullyQualifiedName("jp.kusumotolab.BuggyCalculatorTest.test04");
 
 	private TestResults generateTestResultsForExample01() throws Exception {
-		final String rootDir = "example/example01";
-		final String outDir = rootDir + "/_bin/";
+		final Path rootDir = Paths.get("example/example01");
+		final Path outDir = rootDir.resolve("_bin");
 		final TargetProject targetProject = TargetProject.generate(rootDir);
 		new ProjectBuilder(targetProject).build(outDir);
-		final TestExecutor executor = new TestExecutor(new URL[] { new URL("file:./" + outDir) });
+		final TestExecutor executor = new TestExecutor(new URL[] { outDir.toUri().toURL() });
 		return executor.exec(Arrays.asList(buggyCalculator), Arrays.asList(buggyCalculatorTest));
 	}
 
@@ -41,7 +43,8 @@ public class TestResultsTest {
 	@Test
 	public void checkFLMetricsInTestResultsForExample01() throws Exception {
 		final TestResults r = generateTestResultsForExample01();
-		final FullyQualifiedName bc = buggyCalculator; // alias for buggycalculator
+		final FullyQualifiedName bc = buggyCalculator; // alias for
+														// buggycalculator
 
 		// example01でのbcの6行目（n++;）のテスト結果はこうなるはず
 		assertThat(r.getPassedTestFQNsExecutingTheStatement(bc, 6), is(containsInAnyOrder(test01, test02)));
@@ -210,6 +213,7 @@ public class TestResultsTest {
 
 	/**
 	 * 改行コードのnormalizer
+	 * 
 	 * @param s
 	 * @return
 	 */
